new utility file adding

--- a/ComcastCrmFramework/pom.xml
+++ b/ComcastCrmFramework/pom.xml
@@ -4,6 +4,17 @@
   <artifactId>ComcastCrmFramework</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
+  
+  
+  
+  
+  <properties>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+  </properties>
+  
+  
+  
   <dependencies>
   
      <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
